--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -16,3 +16,20 @@ $workkNav-height: 100px;
 
     width: 100%;
 }
+
+video {
+    // border: 2px solid #ffff00;
+    object-fit: cover;
+
+    width: 100%;
+    height: 100%;
+
+    margin: 0;
+    padding: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
