--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -1,17 +1,7 @@
-/* #region ==================== VARIABLES ==================== */
-
-$body-width: 50vw;
-$body-min-width: 820px;
-// $body-max-width: 1200px;
-$body-max-width: 960px;
-
-// $workkNav-height: 80px;
-$workkNav-height: 100px;
-
-/* #endregion ==================== VARIABLES ==================== */
+@import './Global.scss';
 
 
-/* #region ==================== HEADER ==================== */
+/* #region ========================= BASE ========================= */
 
 .header {
     // border: 02px solid #FF0000;
@@ -22,21 +12,17 @@ $workkNav-height: 100px;
     line-height: 55px;
     text-align: left;
 
-	width: 100%;
-	height: 60px;
+    width: 100vw;
+    height: $header-height;
 
-    margin: 0;
-    padding: 0;
+    // margin: 0;
+    // padding: 0;
 
     position: fixed;
     z-index: 999;
 
     .hed {
         // border: 02px solid #0000ff;
-
-        // width: 50%;
-        // min-width: 820px;
-        // max-width: 1200px;
 
         width: $body-width;
         min-width: $body-min-width;
@@ -45,7 +31,7 @@ $workkNav-height: 100px;
         height: inherit;
 
         margin: 0 auto;
-        padding: inherit;
+        // padding: inherit;
 
         position: relative;
 
@@ -59,8 +45,8 @@ $workkNav-height: 100px;
             width: auto;
             height: inherit;
 
-            margin: 0;
-            padding: inherit;
+            // margin: 0;
+            // padding: inherit;
 
             position: inherit;
             top: 10px;
@@ -76,8 +62,8 @@ $workkNav-height: 100px;
             width: auto;
             height: inherit;
 
-            margin: 0;
-            padding: inherit;
+            // margin: 0;
+            // padding: inherit;
 
             position: inherit;
             top: 9.5px;
@@ -97,8 +83,8 @@ $workkNav-height: 100px;
             // left: 159px;
             left: 140px;
 
-            margin: 0;
-            padding: inherit;
+            // margin: 0;
+            // padding: inherit;
 
             display: table-cell;
 
@@ -108,95 +94,298 @@ $workkNav-height: 100px;
         }
     }
 
-    .navBar {
+    /* #region -------------------- navBarContainer -------------------- */
+
+    .navBarContainer {
         // border: 2px solid #00ff00;
-        border-top: 1px solid #cccccc;
+        // border-top: 1px solid #cccccc;
         border-bottom: 1px solid #cccccc;
 
         // background: #ffffff;
-
-        background: rgb(255,255,255);
-        background: -moz-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
-        background: -webkit-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
-        background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
-
-        // color: #FFFFFF;
-        color: #000000;
-        font-size: 1.25em;
-        text-align: center;
-
-        // width: 50%;
-        // min-width: 820px;
-        // max-width: 1200px;
+        @include navbgGradient01();
 
         width: $body-width;
         min-width: $body-min-width;
         max-width: $body-max-width;
 
-        // height: inherit;
+        height: $navBar-height;
         // height: 30px;
 
         margin: 0 auto;
-        padding: 0;
-        // padding: 0 0 0 100px;
-        // padding: 20px 0;
+        // padding: 0;
 
-        // hr {
-        //     // border: #ff0000;
-        //     // background: #ff0000;
+        // display: table;
 
-        //     border: #aaaaaa;
-        //     background: #aaaaaa;
-
-        //     width: 80%;
-        //     height: 1px;
-
-        //     margin: 0 auto;
-        //     padding: 0;
-        // }
-
-        A {
+        .navBar {
             // border: 2px solid #0000ff;
+            // border-top: 1px solid #cccccc;
+            // border-bottom: 1px solid #cccccc;
 
-            // background: #eeeeee;
+            // background: #ffffff;
+            // background: none;
+            // @include navbgGradient02();
 
-            color: inherit;
-            // color: #000000;
-            text-decoration: none;
+            // color: #FFFFFF;
+            color: #000000;
+            font-size: 1.25em;
+            text-align: center;
 
-            margin: 0;
-            padding: 10px 20px;
+            // width: 70%;
+            width: 50%;
+            height: $navBar-height;
 
-            // :link {
-            //     color: #00ff00;
-            // }
+            margin: 0 auto;
+            // padding: 0;
 
-            // :visited {
-            //     color: #ff00ff;
-            // }
+            display: grid;
+            // grid-template-columns: repeat(6, 16.666666666666667%);
+            // grid-template-columns: repeat(6, auto);
+            grid-template-columns: repeat(5, auto);
+            column-gap: 0;
+            align-items: center;
 
-            // :hover {
-            //     color: #ff0000;
-            // }
+            // A {
+            .navItem {
+                // border: 2px inset #ffff00;
+                // border-right: 1px solid #cccccc;
 
-            // :active {
-            //     background: #eeeeee;
-            //     color: #00ff00;
+                // background: none;
+
+                color: inherit;
+                text-decoration: none;
+
+                height: inherit;
+
+                // margin: 0;
+                // padding: 0;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                /* #region - - - - - - - - - - - A: link behavior - - - - - - - - - - - */
+
+                // :link {
+                //     color: #00ff00;
+                // }
+
+                // :visited {
+                //     color: #ff00ff;
+                // }
+
+                // :hover {
+                //     color: #ff0000;
+                // }
+
+                // :active {
+                //     background: #eeeeee;
+                //     color: #00ff00;
+                // }
+
+                /* #endregion - - - - - - - - - - - A: link behavior - - - - - - - - - - - */
+            }
+
+            // ----- Ferda A separators... doesn't work here -----
+
+            // // A:before {
+            // .navItem:before {
+            // // .navItem:after {
+            //     border: 2px inset #ff0000;
+            //     // border-left: 0.5px solid #cccccc;
+            //     // border-right: 0.5px solid #cccccc;
+
+            //     content: "";
+            //     width: 100%;
+            //     height: 40%;
+
+            //     position: absolute;
+            //     left: 0;
+            //     right: 0;
+            //     // top: 30%;
+            //     top: $header-height + $navBar-height/3;
+            //     bottom: 0;
             // }
         }
+
+        .activeNavDiv {
+            // border: 2px inset #00ffff;
+
+            // @include navbgGradient01();
+            // @include navbgGradient02();
+            @include navbgGradient03();
+            // mix-blend-mode: multiply;
+
+            color: #ff0000;
+            text-align: center;
+
+            // width: auto;
+            height: $navBar-height;
+
+            position: absolute;
+            // top: $header-height;
+            left: 0;
+            // left: 50vw;
+            // z-index: -1;
+        }
+
+
+        /* #region -------------------- workNav -------------------- */
+
+        .workNav {
+            // border: 1px solid #ff00ff;
+
+            // background: #ffffff;
+            @include navbgGradient01();
+
+            // background: #eeeeee;
+            // background: #ffffff;
+
+            text-align: center;
+
+            width: $body-width;
+            min-width: $body-min-width;
+            max-width: $body-max-width;
+
+            height: $workkNav-height;
+
+            margin: 0 auto;
+            // padding: 0;
+            padding: 5px 0 0 0;
+
+            // position: fixed;
+            position: absolute;
+            // top: -40px;
+            // top: -55px;
+            // top: 115px;
+            // top: -$navBar-height;
+            top: $navBar-height;
+            // top: $header-height + $navBar-height;
+            // top: -($header-height - $navBar-height);
+            left: 0;
+            right: 0;
+            z-index: -1;
+
+            .employerIcon {
+                // border: 1px solid #cccccc;
+                // border-right: 1px solid #cccccc;
+
+                // @include navbgGradient03();
+                // mix-blend-mode: multiply;
+
+                width: 10.875%;
+                height: 100%;
+
+                display: inline-block;
+                vertical-align: middle;
+
+                // margin: 0;
+                // padding: 0;
+
+                position: relative;
+                z-index: 1;
+
+                img {
+                    // border: 3px solid #ff0000;
+
+                    max-width: 65%;
+                    // max-height: 85%;
+                    max-height: 80%;
+
+                    margin: auto;
+
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    top: 0;
+                    bottom: 0;
+                }
+            }
+
+            // ----- Ferda employerIcon separators... -----
+
+            .employerIcon:before {
+                border-left: 0.5px solid #cccccc;
+                border-right: 0.5px solid #cccccc;
+
+                content: "";
+                width: 100%;
+                height: 40%;
+
+                position: absolute;
+                left: 0;
+                right: 0;
+                top: 30%;
+                bottom: 0;
+            }
+        }
+
+        /* #endregion -------------------- workNav -------------------- */
+
+
+        /* #region -------------------- navBurger -------------------- */
+
+        .navBurger {
+            // border: 1px solid #ff0000;
+            background: rgba(0,0,0,0.5);
+
+            width: 180px;
+            height: $navBar-height;
+
+            // margin: 0;
+            margin: $header-height 0 0 0;
+            // padding: 0;
+
+            position: absolute;
+            top: 0;
+            right: 0;
+
+            display: none;
+
+            .navDrawer {
+                // border: 1px solid #00ff00;
+                // background: rgba(0,0,0,0.5);
+
+                width: inherit;
+
+                // margin: 0;
+                margin: $navBar-height 0 0 0;
+                // padding: inherit;
+
+                position: inherit;
+                right: inherit;
+
+                img {
+                    // border: 1px solid #0000ff;
+                    // background: rgba(255,255,255,0.5);
+                    background: rgba(255,0,0,0.25);
+
+                    width: 30%;
+
+                    // margin: 0;
+                    padding: 10px;
+                }
+            }
+
+        }
+
+        /* #endregion -------------------- navBurger -------------------- */
+
     }
 
-    /* #region ==================== HEADER: LOGO ==================== */
+    /* #endregion -------------------- navBarContainer -------------------- */
 
-    #logoIcon {
+
+    /* #region - - - - - - - - - - - HEADER: LOGO - - - - - - - - - - - */
+
+    // #logoIconID {
+    .logoIcon {
         // border: 02px solid #FF0000;
 
         // width: 150px;
         height: 125px;
 
-        margin: 0;
-        padding: 0;
+        // margin: 0;
+        // padding: 0;
 
         position: relative;
         top: -56px;
@@ -209,7 +398,7 @@ $workkNav-height: 100px;
         // cursor: pointer;
     }
 
-    // -------------------- LOGO / afro --------------------
+    // -------------------- HEADER: LOGO / afro --------------------
 
     #shigeru_logo_afro_k {
         // fill: #00FF00;
@@ -224,7 +413,7 @@ $workkNav-height: 100px;
         clip-path: url(#shigeru_logo_afro_w_mask);
     }
 
-    // -------------------- LOGO / glasses --------------------
+    // -------------------- HEADER: LOGO / glasses --------------------
 
     #shigeru_logo_glasses_k {
         // fill: #00FF00
@@ -239,7 +428,7 @@ $workkNav-height: 100px;
         clip-path: url(#shigeru_logo_glasses_w_mask);
     }
 
-    // -------------------- LOGO / kanji --------------------
+    // -------------------- HEADER: LOGO / kanji --------------------
 
     #shigeru_logo_kanji_w {
         // fill: #FF00FF;
@@ -248,10 +437,10 @@ $workkNav-height: 100px;
         // clip-path: url(#header_mask);
     }
 
-    /* #endregion ==================== HEADER: LOGO ==================== */
+    /* #endregion - - - - - - - - - - - HEADER: LOGO - - - - - - - - - - - */
 
 
-    /* #region ==================== HEADER: LOGO (reserves) ==================== */
+    /* #region - - - - - - - - - - - HEADER: LOGO (reserves) - - - - - - - - - - - */
 
     // #logo {
     //     // border: 02px solid #FF0000
@@ -269,7 +458,7 @@ $workkNav-height: 100px;
     //     cursor: pointer;
     // }
 
-    // #logo path, #logoIcon path {
+    // #logo path, #logoIconID path {
     //     fill: #FF0000;
     // }
 
@@ -311,94 +500,115 @@ $workkNav-height: 100px;
     //     display: block;
     // }
 
-    /* #endregion ==================== HEADER: LOGO (reserves) ==================== */
+    /* #endregion - - - - - - - - - - - HEADER: LOGO (reserves) - - - - - - - - - - - */
 
 }
 
-/* #endregion ==================== HEADER ==================== */
+/* #endregion ========================= BASE ========================= */
 
 
-/* #region ==================== WORKNAV ==================== */
 
-.workNav {
-    // border: 1px solid #ff00ff;
+/* #region ========================= RETINA LAPTOPS: 1025px+ ========================= */
 
-    // background: #eeeeee;
-    // background: #ffffff;
+@media screen 
+    and (min-device-width: 1025px) 
+    // and (min-device-width: 1201px) 
+    // and (max-device-width: 1600px) 
+    // and (max-device-width: 2049px) 
+    // and (-webkit-min-device-pixel-ratio: 2) 
+    // and (min-resolution: 192dpi)
+    { 
 
-    background: rgb(255,255,255);
-    background: -moz-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
+        /* #region -------------------- HEADER -------------------- */
 
-    text-align: center;
+        // .header_md, .header_sm {
+        //     /* visibility: hidden; */
+        //     display: none;
+        // }
 
-    width: $body-width;
-    min-width: $body-min-width;
-    max-width: $body-max-width;
+        /* #endregion -------------------- HEADER -------------------- */
 
-    height: $workkNav-height;
 
-    margin: 0 auto;
-    padding: 0;
+        /* #region -------------------- WORKNAV -------------------- */
 
-    position: fixed;
-    top: -40px;
-    // top: 0;
-    // top: 115px;
-    left: 0;
-    right: 0;
-    z-index: 100;
+        /* #endregion -------------------- WORKNAV -------------------- */
 
-    .employerIcon {
-        // border: 1px solid #cccccc;
-        // border-right: 1px solid #cccccc;
+    }
 
-        width: 10.875%;
-        height: 100%;
+/* #endregion ========================= RETINA LAPTOPS: 1201px+ ========================= */
 
-        display: inline-block;
-        vertical-align: middle;
 
-        margin: 0;
-        padding: 0;
 
-        position: relative;
-        z-index: 1;
+/* #region ========================= TABLETS: 768px - 1024px ========================= */
 
-        img {
-            // border: 3px solid #ff0000;
+@media screen 
+    and (min-device-width: 768px) 
+    // and (min-device-width: 813px) 
+    and (max-device-width: 1024px)  
+    // and (max-device-width: 1200px) 
+    // and (max-device-width: 2048px) 
+    and (-webkit-min-device-pixel-ratio: 2) 
+    { 
 
-            max-width: 65%;
-            max-height: 85%;
+        // /* #region -------------------- HEADER -------------------- */
 
-            margin: auto;
+        // .header_lg, .header_sm {
+        //     /* visibility: hidden; */
+        //     display: none;
+        // }
 
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
+        .contact {
+            left: 110px !important;
+            // display: none !important;
         }
+
+        /* #region - - - - - - - - - - - HEADER: LOGO - - - - - - - - - - - */
+
+        .hed {
+            left: -20px !important;
+        }
+
+        /* #endregion - - - - - - - - - - - HEADER: LOGO - - - - - - - - - - - */
+
+        // /* #endregion -------------------- HEADER -------------------- */
+
+
+        // /* #region -------------------- WORKNAV -------------------- */
+
+        // .workNav {
+        //     display: none;
+        // }
+
+        // /* #endregion -------------------- WORKNAV -------------------- */
+
     }
 
-    // ----- Ferda employerIcon separators... -----
+/* #endregion ========================= TABLETS: 813px - 1200px ========================= */
 
-    .employerIcon:before {
-        border-left: 0.5px solid #cccccc;
-        border-right: 0.5px solid #cccccc;
 
-        content: "";
-        width: 100%;
-        height: 40%;
 
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 30%;
-        bottom: 0;
+/* #region ========================= MOBILE (iPHONE X): 375px - 767px ========================= */
+
+@media screen 
+    and (min-device-width: 375px) 
+    // and (max-device-width: 812px) 
+    and (max-device-width: 767px) 
+    // and (-webkit-min-device-pixel-ratio: 3)
+    { 
+        /* #region -------------------- HEADER -------------------- */
+
+        // .header_lg, .header_md {
+        //     /* visibility: hidden; */
+        //     display: none;
+        // }
+
+        /* #endregion -------------------- HEADER -------------------- */
+
+
+        /* #region -------------------- WORKNAV -------------------- */
+
+        /* #endregion -------------------- WORKNAV -------------------- */
+
     }
-}
 
-/* #endregion ==================== WORKNAV ==================== */
+/* #endregion ========================= MOBILE (iPHONE X): 375px - 813px ========================= */
