--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,12 +1,14 @@
+@import './Global.scss';
+
 /* #region ==================== VARIABLES ==================== */
 
-$body-width: 50vw;
-$body-min-width: 820px;
-// $body-max-width: 1200px;
-$body-max-width: 960px;
+// $body-width: 50vw;
+// $body-min-width: 820px;
+// // $body-max-width: 1200px;
+// $body-max-width: 960px;
 
-// $workkNav-height: 80px;
-$workkNav-height: 100px;
+// // $workkNav-height: 80px;
+// $workkNav-height: 100px;
 
 /* #endregion ==================== VARIABLES ==================== */
 
